fix backdate label positioning
> backdate label was overflowing outside its container

--- a/src/newProgNotePage/index.styl
+++ b/src/newProgNotePage/index.styl
@@ -21,7 +21,7 @@
 
 	.backdateContainer
 		padding 12px
-		display flex
+		//display flex
 		justify-content center
 
 		.input-group
